--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,3 @@
-
 <nav class="navbar navbar-expand-lg bg-body-tertiary p-0 z-1">
   <div class="container-fluid p-0">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -15,7 +14,7 @@
         <li class="nav-item">
           <a class="nav-link" href="/Relatos">RELATOS</a>
         </li>
-        <a class="navbar-brand" href="#">MAPEANDO LUGARES</a>
+        <a class="navbar-brand" href="/">MAPEANDO LUGARES</a>
         <li class="nav-item">
           <a class="nav-link" href="/Galerias">GALERÍA</a>
         </li>
@@ -39,6 +38,7 @@
     }
   })
 </script>
+
 <style>
   .nav{
     background-color: #1E2C3D;
