--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,9 +54,9 @@ import Footer from '../components/Footer.astro';
 			</div>
 		</div>
 	</section>
-	<section class="sectionVideo">
+	<section class="sectionVideo" style="margin-top: 3rem;">
 		<h3>ARTE Y CULTURA EN EL CENTRO DE BOGOTÁ</h3>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/Db07CkyC60E?si=oOLILvXnUrSbd2KC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		<iframe width="760" height="515" src="https://www.youtube.com/embed/ZuNwQFUpsGM?si=rERMOWjm2t2Ovug4&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 	</section>
 </Layout>
 
